@@ -50,3 +50,9 @@
 
  - Webmin SSL cert / CSR generation directly
 	- https://www.virtualmin.com/node/14502
+
+ - Move demo to srv2
+
+ - Make bw.pl schedule configurable (done)
+	- http://www.virtualmin.com/node/14587
+	- bandwidth_all_unix function, to avoid repeated FTP log scans
