@@ -1,0 +1,9 @@
+<header>Hours between collection</header>
+
+By default Virtualmin will check log files every hour to compute statistics
+for bandwidth monitoring. However, you can increase that interval using this
+field if hourly is too often, such as due to high CPU load by the <tt>bw.pl</tt>
+cron job. <p>
+
+<footer>
+
