@@ -2451,6 +2451,7 @@ newkey_ematch=Certificate problem detected : $1
 newbw_title=Bandwidth Monitoring
 newbw_desc=This page can be used to enable bandwidth accounting for virtual servers, to notify server owners and the master administrator when a server exceeds its allowed bandwidth.
 newbw_active=Bandwidth monitoring active?
+newbw_step=Hours between collection
 newbw_owner=Send email to server owners when over limit?
 newbw_email=Also send email to
 newbw_period=Accounting period
@@ -2465,6 +2466,7 @@ newbw_notify=Interval between sending emails
 newbw_hours=hours
 newbw_err=Failed to save bandwidth settings
 newbw_eperiod=Missing or invalid period
+newbw_estep=Hours between collection must be a number from 1 to 24
 newbw_ecannot=You are not allowed to edit bandwidth monitoring
 newbw_template=Email message to send when over limit
 newbw_subject=Bandwidth limit exceeded for $1
