@@ -1236,3 +1236,4 @@ Updated the ZenCart script installer to version 1.3.9e, Coppermine to 1.5.8, Moi
 Alias domain DNS records are now copied from the target domain at creation time, rather than being created from the selected template.
 S3 backups can now be use the new reduced redundancy storage option, which is cheaper but less reliable.
 Internationalized domain names are no longer converted to UTF-8 for output from API commands, to avoid the perl "wide character in print" warning.
+The interval between bandwidth monitoring cron job runs can now be configured.
